--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -94,7 +94,7 @@
 
     <!-- information -->
 
-    <div class="element-container" id="information">
+    <div class="element-container" id="information" style="position: relative; z-index: 2;">
 
       <div class="flex-container row" id="aboutSection" style="margin-top: 80px; height: 100%;">
         <div class="flex-container col information-parent-items d-none" id="information-card" style="flex: 8; justify-content: end;">
@@ -163,6 +163,10 @@
         </div>
       </div>
 
+      <div style="position: absolute; object-fit: cover; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
+        <img src="assets/images/splash-nobg.png" alt="" style="width: 100%; height: 100%;">
+      </div>
+
     </div>
 
     <!-- end content -->
@@ -179,44 +183,5 @@
 </div>
 <script src="assets/scripts/navbar.js"></script>
 <script src="assets/scripts/animation_handler.js"></script>
-<!-- <script src="../bootstrap/js/bootstrap.bundle.min.js"></script> -->
-<script>
-
-  var previewSection = document.getElementById("previewSection")
-  const divElement = document.getElementById("project-preview")
-
-
-  function scrollingContent(tid){
-    const targetElement = document.getElementById(tid)
-    const container = document.getElementById("scroll-container")
-    var image = targetElement.querySelector("img")
-    var prevImage = divElement.querySelector("img")
-    var imgSrc = image.src
-
-    const containerRect = container.getBoundingClientRect()
-    const targetElementRect = targetElement.getBoundingClientRect()
-
-    const scrollOffset = targetElementRect.left - containerRect.left
-    const scrollAmount = scrollOffset - (containerRect.width / 2) + (targetElementRect.width / 2)
-
-    const body = document.body;
-
-    body.style.backgroundImage = `url("${imgSrc}")`
-
-    previewSection.classList.add("fade-in")
-
-    container.scrollBy({
-      left: scrollAmount,
-      behavior: 'smooth'
-    })
-
-    prevImage.src = imgSrc
-
-    previewSection.addEventListener("animationend", function(){
-      previewSection.classList.remove("fade-in")
-    })
-  }
-</script>
-<!-- <script src="assets/swiper/swiper-bundle.min.js"></script> -->
 </body>
 </html>
