push web bahasa inggris

--- a/web-bahasa-inggris/index.html
+++ b/web-bahasa-inggris/index.html
@@ -189,7 +189,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Chrisdinata</p>
+            <p>&copy; 2025 Chrisdinata TRPL-2A</p>
         </div>
     </footer>
 
