--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -46,10 +46,9 @@
     <nav class="navbar-l glass-effect">
         <div class="logo-l">nutt.a</div>
         <ul class="nav-links-l" id="navLinks-l">
-          <li><a href="#information" class="nav-link-l">Home</a></li>
-          <li><a href="#about" class="nav-link-l">About</a></li>
-          <li><a href="#services" class="nav-link-l">Services</a></li>
-          <li><a href="#contact" class="nav-link-l">Contact</a></li>
+          <li><a href="#home" class="nav-link-l">Home</a></li>
+          <li><a href="#information" class="nav-link-l">Information</a></li>
+          <li><a href="#target2" class="nav-link-l">About</a></li>
         </ul>
         <div class="hamburger-l" id="hamburger-l">
           ☰
@@ -59,7 +58,7 @@
     
     <!-- start content -->
     
-    <div class="flex-container row" style="margin-bottom: 20px; height: 100vh; width: 100%;">
+    <div class="flex-container row" id="home" style="margin-bottom: 20px; height: 100vh; width: 100%;">
       <!-- name -->
       <div class="flex-container col" id="hero-name" style="flex: 1; height: 100%;">
         <h1 class="column-text-direction text-heading up-To-Down" style="color: #ffe135; animation-duration: 0.5s;">
