--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -93,7 +93,7 @@
 
     <!-- information -->
 
-    <div class="element-container" id="information" style="position: relative; z-index: 2;">
+    <div class="element-container" id="information" style="position: relative; z-index: 2;" onscroll="translateBg()">
 
       <div class="flex-container row" id="aboutSection" style="margin-top: 80px; height: 100%;">
         <div class="flex-container col information-parent-items d-none" id="information-card" style="flex: 8; justify-content: end;">
@@ -162,7 +162,7 @@
         </div>
       </div>
 
-      <div style="position: absolute; object-fit: cover; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
+      <div id="gambarBg" style="position: absolute; object-fit: cover; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
         <img src="assets/images/splash-nobg.png" alt="" style="width: 100%; height: 100%;">
       </div>
 
